--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,6 @@
+
+
+
 .header_box{
     display: flex;
     width: 90%;
@@ -162,6 +165,18 @@ font-weight: 80;
     border: 0px solid black;
 }
 
+.large_image:hover{
+    width: 400px;
+    height: 400px;
+    margin: 5px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content:flex-end;
+    border: 0px solid black;
+    filter: blur(5px); 
+}
+
 .large_image img{
     min-width: 100%; 
     min-height: 100%;
@@ -176,7 +191,6 @@ font-weight: 80;
     position: relative;
     display: flex;
     justify-content:flex-end;
-    border: 1px solid black;
 }
 
 .small_image img{
@@ -185,6 +199,33 @@ font-weight: 80;
     object-fit:cover;
 }
 
+.small_image:hover{
+    width: 200px;
+    height: 200px;
+    margin: 5px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    justify-content:flex-end;
+    filter: blur(5px); 
+}
+
+.overlay-text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: rgba(0, 0, 0, 0.7);
+    color: white;
+    padding: 10px 20px;
+    font-size: 16px;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+  
+  .large_image:hover .overlay-text {
+    opacity: 1;
+  }
 
 .intro_img{
     width: 40%;
@@ -208,4 +249,49 @@ font-weight: 80;
     box-sizing: border-box; 
     justify-content: flex-start;
     align-items: flex-start;
+  }
+
+
+
+
+  .gate_carousel_wrapper{
+    padding-top: 20px;
+    text-align:center;
+    margin-top: 30px;
+
+  }
+
+  .carousel{
+    width:30%;
+    margin:30px auto;
+  }
+
+  .carousel-nav{
+    width:40%;
+    margin:30px auto;
+  }
+
+
+  .slick-slide{
+    margin:10px;
+  }
+  .slick-slide img{
+    width:100%;
+  }
+
+
+
+  .slick-prev:before {
+    color: gray !important;
+    background-color: #eee;
+  }
+  .slick-next:before {
+    color: gray !important;
+    background-color: #eee;
+  }
+
+
+  .carousel_container{
+    display: flex;
+    justify-content: space-between;
   }
