--- a/css/styles.css
+++ b/css/styles.css
@@ -156,6 +156,8 @@ height: 800px;
   background-repeat: no-repeat;
   margin-right: 10%;
   height: 900px;
+  margin-bottom: 50px;
+  
   }
   
 #pier_intro{
